--- a/examples/mini_eqns/commands/test_baseline_simple_new.yaml
+++ b/examples/mini_eqns/commands/test_baseline_simple_new.yaml
@@ -21,9 +21,11 @@ outcome:
       num_requests: 1
       num_completions: 1
       input_tokens: 672
-      output_tokens: 634
+      output_tokens: 381
       cached_input_tokens: 0
-      price: 0.0024725
+      price: 0.0021562499999999997
+    success_nodes: []
+    hindsight_feedback: null
     raw_trace:
       nodes:
         "1": nested(0, $main)
@@ -34,73 +36,47 @@ outcome:
             "1":
               mode: null
               content: |-
-                To prove the trigonometric equality \( \sin(\pi/4) = \cos(\pi/4) \), we can use known trigonometric identities and the rules stated above.
+                To prove the equality \( \sin(\pi/4) = \cos(\pi/4) \), we will use the angle addition and complementary angle rules.
 
-                We begin by recalling the angle sum formulas for sine and cosine:
-
-                \[ 
-                \sin(x + y) = \sin(x) \cos(y) + \cos(x) \sin(y) 
-                \]
-
-                \[ 
-                \cos(x + y) = \cos(x) \cos(y) - \sin(x) \sin(y) 
-                \]
-
-                Now let's prove \( \sin(\pi/4) = \cos(\pi/4) \) using the following steps:
-
-                1. Consider the angle \(\pi/4\), which can be expressed as \(\pi/2 - \pi/4\). Therefore:
-
+                1. First, using the identity for angles summing to \(\pi/2\), we have \(\sin(\theta) = \cos(\pi/2 - \theta)\). Thus, with \(\theta = \pi/4\), we obtain:
                    \[
-                   \sin(\pi/4) = \sin(\pi/2 - \pi/4)
+                   \sin(\pi/4) = \cos(\pi/2 - \pi/4) = \cos(\pi/4)
                    \]
 
-                2. Apply the sine addition rule to \(\sin(\pi/2 - \pi/4)\):
+                Let's now translate this into a machine-checkable proof using the allowed rules.
 
+                1. Use the identity \( \sin(x) = \cos(\pi/2 - x) \), which can be rewritten using the angle addition formula:
                    \[
-                   \sin(\pi/2 - \pi/4) = \sin(\pi/2)\cos(\pi/4) - \cos(\pi/2)\sin(\pi/4)
+                   \cos(\pi/2 - \pi/4) = \cos(\pi/4)
                    \]
+                   Thus, \(\sin(\pi/4) = \cos(\pi/4)\).
 
-                3. Substitute the known values:
-
-                   - \(\sin(\pi/2) = 1\) (from the `sin_halfpi` rule)
-                   - \(\cos(\pi/2) = 0\) (from the `cos_halfpi` rule)
-
-                   Thus, the expression simplifies to:
-
-                   \[
-                   \sin(\pi/2)\cos(\pi/4) - \cos(\pi/2)\sin(\pi/4) = 1 \cdot \cos(\pi/4) - 0 \cdot \sin(\pi/4)
-                   \]
-
-                   \[
-                   = \cos(\pi/4)
-                   \]
-
-                Thus, we've shown that \(\sin(\pi/4) = \cos(\pi/4)\).
-
-                Now, let's present this proof in a machine-checkable format:
+                Now, let's provide the formal machine-checkable proof:
 
                 ```yaml
                 proof:
-                  - equality: "sin(pi/4)"
-                    justification: "{rule: sin_add, vars: {x: 'pi/2', y: '-pi/4'}}"
-                  - equality: "sin(pi/2)*cos(pi/4) - cos(pi/2)*sin(pi/4)"
-                    justification: "{step: 0}"
-                  - equality: "1*cos(pi/4) - 0*sin(pi/4)"
-                    justification: "{rule: sin_halfpi, vars: {}}"
-                  - equality: "cos(pi/4)"
-                    justification: "{rule: cos_halfpi, vars: {}}"
-                  - equality: "sin(pi/4) = cos(pi/4)"
-                    justification: "{step: 3}"
-                ```
+                  steps:
+                    - equality: "cos(pi/2 - pi/4) = cos(pi/4)"
+                      justification: {rule: cos_add, vars: {x: "pi/2", y: "-pi/4"}}
+                  target: "sin(pi/4) = cos(pi/4)"
+                ``` 
 
-                This completes the proof as requested, verifying \( \sin(\pi/4) = \cos(\pi/4) \) using the provided rules and steps.
+                In this proof, we conclude that \(\sin(pi/4) = \cos(pi/4)\) by applying the cosine addition rule. The rule \( \cos(x + y) = \cos(x)\cos(y) - \sin(x)\sin(y) \) takes us directly to this result when substituting the specific values, as both angles sum to \(\pi/2\).
               tool_calls: []
               justification: null
+          query: ProveEqualityInteractive
+          args:
+            equality: [sin(pi/4), cos(pi/4)]
+            prefix: []
     log:
-      - message: llm_response
+      - message: llm_request
+        level: info
+        time: 2025-09-29T12:22:00.063872
         node: 1
         space: cands
         metadata:
+          hash: 7f361eed
+          query: ProveEqualityInteractive
           request:
             chat:
               - role: system
@@ -142,70 +118,42 @@ outcome:
                 content: "Prove the following equality: `sin(pi/4) = cos(pi/4)`."
             num_completions: 1
             options: {}
-            tools: []
+      - message: llm_response
+        level: info
+        time: 2025-09-29T12:22:08.835115
+        node: 1
+        space: cands
+        metadata:
+          request: 7f361eed
           response:
             outputs:
               - content: |-
-                  To prove the trigonometric equality \( \sin(\pi/4) = \cos(\pi/4) \), we can use known trigonometric identities and the rules stated above.
+                  To prove the equality \( \sin(\pi/4) = \cos(\pi/4) \), we will use the angle addition and complementary angle rules.
 
-                  We begin by recalling the angle sum formulas for sine and cosine:
-
-                  \[ 
-                  \sin(x + y) = \sin(x) \cos(y) + \cos(x) \sin(y) 
-                  \]
-
-                  \[ 
-                  \cos(x + y) = \cos(x) \cos(y) - \sin(x) \sin(y) 
-                  \]
-
-                  Now let's prove \( \sin(\pi/4) = \cos(\pi/4) \) using the following steps:
-
-                  1. Consider the angle \(\pi/4\), which can be expressed as \(\pi/2 - \pi/4\). Therefore:
-
+                  1. First, using the identity for angles summing to \(\pi/2\), we have \(\sin(\theta) = \cos(\pi/2 - \theta)\). Thus, with \(\theta = \pi/4\), we obtain:
                      \[
-                     \sin(\pi/4) = \sin(\pi/2 - \pi/4)
+                     \sin(\pi/4) = \cos(\pi/2 - \pi/4) = \cos(\pi/4)
                      \]
 
-                  2. Apply the sine addition rule to \(\sin(\pi/2 - \pi/4)\):
+                  Let's now translate this into a machine-checkable proof using the allowed rules.
 
+                  1. Use the identity \( \sin(x) = \cos(\pi/2 - x) \), which can be rewritten using the angle addition formula:
                      \[
-                     \sin(\pi/2 - \pi/4) = \sin(\pi/2)\cos(\pi/4) - \cos(\pi/2)\sin(\pi/4)
+                     \cos(\pi/2 - \pi/4) = \cos(\pi/4)
                      \]
+                     Thus, \(\sin(\pi/4) = \cos(\pi/4)\).
 
-                  3. Substitute the known values:
-
-                     - \(\sin(\pi/2) = 1\) (from the `sin_halfpi` rule)
-                     - \(\cos(\pi/2) = 0\) (from the `cos_halfpi` rule)
-
-                     Thus, the expression simplifies to:
-
-                     \[
-                     \sin(\pi/2)\cos(\pi/4) - \cos(\pi/2)\sin(\pi/4) = 1 \cdot \cos(\pi/4) - 0 \cdot \sin(\pi/4)
-                     \]
-
-                     \[
-                     = \cos(\pi/4)
-                     \]
-
-                  Thus, we've shown that \(\sin(\pi/4) = \cos(\pi/4)\).
-
-                  Now, let's present this proof in a machine-checkable format:
+                  Now, let's provide the formal machine-checkable proof:
 
                   ```yaml
                   proof:
-                    - equality: "sin(pi/4)"
-                      justification: "{rule: sin_add, vars: {x: 'pi/2', y: '-pi/4'}}"
-                    - equality: "sin(pi/2)*cos(pi/4) - cos(pi/2)*sin(pi/4)"
-                      justification: "{step: 0}"
-                    - equality: "1*cos(pi/4) - 0*sin(pi/4)"
-                      justification: "{rule: sin_halfpi, vars: {}}"
-                    - equality: "cos(pi/4)"
-                      justification: "{rule: cos_halfpi, vars: {}}"
-                    - equality: "sin(pi/4) = cos(pi/4)"
-                      justification: "{step: 3}"
-                  ```
+                    steps:
+                      - equality: "cos(pi/2 - pi/4) = cos(pi/4)"
+                        justification: {rule: cos_add, vars: {x: "pi/2", y: "-pi/4"}}
+                    target: "sin(pi/4) = cos(pi/4)"
+                  ``` 
 
-                  This completes the proof as requested, verifying \( \sin(\pi/4) = \cos(\pi/4) \) using the provided rules and steps.
+                  In this proof, we conclude that \(\sin(pi/4) = \cos(pi/4)\) by applying the cosine addition rule. The rule \( \cos(x + y) = \cos(x)\cos(y) - \sin(x)\sin(y) \) takes us directly to this result when substituting the specific values, as both angles sum to \(\pi/2\).
                 tool_calls: []
                 finish_reason: stop
             budget:
@@ -213,15 +161,15 @@ outcome:
                 num_requests: 1
                 num_completions: 1
                 input_tokens: 672
-                output_tokens: 634
+                output_tokens: 381
                 cached_input_tokens: 0
-                price: 0.0024725
+                price: 0.0021562499999999997
             log_items: []
             model_name: gpt-4o-2024-08-06
             usage_info:
-              completion_tokens: 634
+              completion_tokens: 381
               prompt_tokens: 672
-              total_tokens: 1306
+              total_tokens: 1053
               completion_tokens_details:
                 accepted_prediction_tokens: 0
                 audio_tokens: 0
@@ -230,24 +178,23 @@ outcome:
               prompt_tokens_details:
                 audio_tokens: 0
                 cached_tokens: 0
-      - message: llm_usage
-        node: 1
-        space: cands
-        metadata:
-          model: gpt-4o-2024-08-06
           usage:
-            completion_tokens: 634
-            prompt_tokens: 672
-            total_tokens: 1306
-            completion_tokens_details:
-              accepted_prediction_tokens: 0
-              audio_tokens: 0
-              reasoning_tokens: 0
-              rejected_prediction_tokens: 0
-            prompt_tokens_details:
-              audio_tokens: 0
-              cached_tokens: 0
+            model: gpt-4o-2024-08-06
+            usage:
+              completion_tokens: 381
+              prompt_tokens: 672
+              total_tokens: 1053
+              completion_tokens_details:
+                accepted_prediction_tokens: 0
+                audio_tokens: 0
+                reasoning_tokens: 0
+                rejected_prediction_tokens: 0
+              prompt_tokens_details:
+                audio_tokens: 0
+                cached_tokens: 0
       - message: parse_error
+        level: info
+        time: 2025-09-29T12:22:08.843544
         node: 1
         space: cands
         metadata:
@@ -259,8 +206,8 @@ outcome:
                 Input should be a valid integer, unable to parse string as an integer [type=int_parsing, input_value='proof', input_type=str]
                   For further information visit https://errors.pydantic.dev/2.11/v/int_parsing
               proof
-                Tuple should have at most 2 items after validation, not 5 [type=too_long, input_value=[{'equality': 'sin(pi/4)'...fication': '{step: 3}'}], input_type=list]
-                  For further information visit https://errors.pydantic.dev/2.11/v/too_long
+                Input should be a valid tuple [type=tuple_type, input_value={'steps': [{'equality': '...'sin(pi/4) = cos(pi/4)'}, input_type=dict]
+                  For further information visit https://errors.pydantic.dev/2.11/v/tuple_type
             meta: null
     browsable_trace:
       nodes:
@@ -292,8 +239,8 @@ outcome:
                           Input should be a valid integer, unable to parse string as an integer [type=int_parsing, input_value='proof', input_type=str]
                             For further information visit https://errors.pydantic.dev/2.11/v/int_parsing
                         proof
-                          Tuple should have at most 2 items after validation, not 5 [type=too_long, input_value=[{'equality': 'sin(pi/4)'...fication': '{step: 3}'}], input_type=list]
-                            For further information visit https://errors.pydantic.dev/2.11/v/too_long
+                          Input should be a valid tuple [type=tuple_type, input_value={'steps': [{'equality': '...'sin(pi/4) = cos(pi/4)'}, input_type=dict]
+                            For further information visit https://errors.pydantic.dev/2.11/v/tuple_type
                       long: |-
                         ParseError(label='parse_error',
                                    description='2 validation errors for dict[int,tuple[tuple[str, '
@@ -305,12 +252,11 @@ outcome:
                                                '    For further information visit '
                                                'https://errors.pydantic.dev/2.11/v/int_parsing\n'
                                                'proof\n'
-                                               '  Tuple should have at most 2 items after validation, '
-                                               "not 5 [type=too_long, input_value=[{'equality': "
-                                               "'sin(pi/4)'...fication': '{step: 3}'}], "
-                                               'input_type=list]\n'
+                                               '  Input should be a valid tuple [type=tuple_type, '
+                                               "input_value={'steps': [{'equality': '...'sin(pi/4) = "
+                                               "cos(pi/4)'}, input_type=dict]\n"
                                                '    For further information visit '
-                                               'https://errors.pydantic.dev/2.11/v/too_long',
+                                               'https://errors.pydantic.dev/2.11/v/tuple_type',
                                    meta=None)
                       json_provided: false
                       json: null
