feat: new baseline adaptation

--- a/examples/mini_eqns/delphyne.yaml
+++ b/examples/mini_eqns/delphyne.yaml
@@ -1,4 +1,4 @@
 strategy_dirs: ["."]
 prompt_dirs: ["./prompts"]
-modules: ["baseline_strategy"]
-demo_files: ["baseline"]
+modules: ["baseline_strategy", "baseline_interactive"]
+demo_files: ["baseline", "baseline_interactive"]
